--- a/packages/core/src/components/link/link-vars.scss
+++ b/packages/core/src/components/link/link-vars.scss
@@ -7,7 +7,7 @@
   --tds-link-disabled: var(--tds-grey-250);
 
   tds-toast {
-    --tds-link: var(--tds-blue-300);
+    --tds-link: var(--tds-grey-50);
     --tds-link-hover: var(--tds-blue-400);
     --tds-link-focus: var(--tds-blue-400);
     --tds-link-visited: var(--tds-blue-700);
@@ -27,7 +27,7 @@
   --tds-link-disabled: var(--tds-grey-500);
 
   tds-toast {
-    --tds-link: var(--tds-blue-500);
+    --tds-link: var(--tds-grey-950);
     --tds-link-hover: var(--tds-blue-300);
     --tds-link-focus: var(--tds-blue-300);
     --tds-link-visited: var(--tds-blue-100);
